# Master-1-PPN-Redux

./: .clang-format  .gitignore  CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in  doxygen-awesome.css
src/: CMakeLists.txt  global.h  main.c  main.cpp  testing.c  type.h
src/context/: CMakeLists.txt  context.c  context.h
src/convolution_neural_network/: CMakeLists.txt  evaluation.c  evaluation.h  store.c  store.h  training.c  training.h
src/convolution_neural_network/convolution_layer/: CMakeLists.txt  convolution_layer.c  convolution_layer.h
src/convolution_neural_network/neural_network/: CMakeLists.txt  neural_network.c  neural_network.h
src/image/: CMakeLists.txt  dataset_manager.c  dataset_manager.h  image_io.c  image_io.h
src/io/: CMakeLists.txt  Dataset.cpp  Dataset.hpp  DatasetInfo.cpp  DatasetInfo.hpp  Image.cpp  Image.hpp  ImageInfo.cpp  ImageInfo.hpp
tests/: test-conv.c  test-nn.c  test-storage.c
